# compress_igb

./: CMakeLists.txt  dumpTables.c  dumpTables.cc  igbunzip.c  igbunzip.cc  igbunzip.ggo  igbzip.c  igbzip.cc  igbzip.ggo  short_float.cc  short_float.h  testConversion.cc
